@@ -3012,18 +3012,23 @@ proc ::tcl::clock::GetSystemTimeZone {} {
 	set timezone $result
     } elseif {[set result [getenv TZ]] ne {}} {
 	set timezone $result
-    } elseif { [info exists CachedSystemTimeZone] } {
-	set timezone $CachedSystemTimeZone
-    } elseif { $::tcl_platform(platform) eq {windows} } {
-	set timezone [GuessWindowsTimeZone]
-    } elseif { [file exists /etc/localtime]
-	       && ![catch {ReadZoneinfoFile \
-			       Tcl/Localtime /etc/localtime}] } {
-	set timezone :Tcl/Localtime
-    } else {
-	set timezone :localtime
     }
-    set CachedSystemTimeZone $timezone
+    if {![info exists timezone]} {
+        # Cache the time zone only if it was detected by one of the
+        # expensive methods.
+        if { [info exists CachedSystemTimeZone] } {
+            set timezone $CachedSystemTimeZone
+        } elseif { $::tcl_platform(platform) eq {windows} } {
+            set timezone [GuessWindowsTimeZone]
+        } elseif { [file exists /etc/localtime]
+                   && ![catch {ReadZoneinfoFile \
+                                   Tcl/Localtime /etc/localtime}] } {
+            set timezone :Tcl/Localtime
+        } else {
+            set timezone :localtime
+        }
+	set CachedSystemTimeZone $timezone
+    }
     if { ![dict exists $TimeZoneBad $timezone] } {
 	dict set TimeZoneBad $timezone [catch {SetupTimeZone $timezone}]
     }
